# claude-code-workflow

./: .dropboxignore  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  TROUBLESHOOTING.md  pyproject.toml
.claude/: settings.json
.claude/agents/: beamer-translator.md  claim-verifier.md  domain-referee.md  domain-reviewer.md  editor.md  humanize-auditor.md  methods-referee.md  pedagogy-reviewer.md  plan-auditor.md  promote-memory-council.md  proofreader.md  python-reviewer.md  r-reviewer.md  sim-reviewer.md  slide-auditor.md  stata-reviewer.md  verifier.md
.claude/references/: agent-fleet.md  audit-pet-peeves.md  prompt-formatting-core.md  v2.0-backlog.md
.claude/rules/: cross-artifact-review.md  meta-governance.md  model-routing.md  orchestrator-protocol.md  post-flight-verification.md  python-code-conventions.md  quality-gates.md  r-code-conventions.md  replication-protocol.md  single-source-of-truth.md  stata-code-conventions.md  verification-protocol.md
.claude/skills/analysis-plan/: SKILL.md
.claude/skills/audit-reproducibility/: SKILL.md
.claude/skills/capture-environment/: SKILL.md
.claude/skills/checkpoint/: SKILL.md
.claude/skills/coauthor-brief/: SKILL.md
.claude/skills/compress-session/: SKILL.md
.claude/skills/context-status/: SKILL.md
.claude/skills/cross-check/: SKILL.md
.claude/skills/data-analysis-python/: SKILL.md
.claude/skills/data-analysis-r/: SKILL.md
.claude/skills/data-analysis-stata/: SKILL.md
.claude/skills/deep-audit/: SKILL.md
.claude/skills/did-event-study/: SKILL.md
.claude/skills/disclosure-check/: SKILL.md
.claude/skills/grant-proposal/: SKILL.md
.claude/skills/humanize/: SKILL.md
.githooks/: pre-commit
.github/: CONTRIBUTING.md
docs/: index.html  workflow-guide.html
guide/: .gitignore  workflow-guide.html  workflow-guide.qmd
quality_reports/: did_validation_card_krueger.md
scripts/: check-environment.sh  check-surface-sync.py  mac-setup.sh  quality_score.py  validate-setup.sh  windows-setup.ps1
scripts/R/: install-packages.R
scripts/stata/: 00_install_ado.do
templates/: skill-template.md
tests/: TESTING.md
(+46 files in other folders)
